replace com.sun.tools.javac.util.List with java.util.Arrays